prosim vstrel me... lp

--- a/frontend/homesteadhubdv/src/App.css
+++ b/frontend/homesteadhubdv/src/App.css
@@ -65,6 +65,7 @@
   background-color: aqua;
   background-repeat: no-repeat;
   background-size: cover;
+  background-image:url("https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg");
   
 }
 
