--- a/frontend/homesteadhubdv/src/css/ogledNepremicnine.css
+++ b/frontend/homesteadhubdv/src/css/ogledNepremicnine.css
@@ -74,4 +74,29 @@ align-items: center;
     width: 25vw;
     height: 30vh;
     flex-direction: column;
+
+    text-align: left;
+
+}
+
+.lokacijaCon{
+display: flex;
+flex-direction: row;
+/* background-color: aqua; */
+width: 100%;
+ /* justify-content: space-evenly; */
+ text-align: left;
+ gap: 4rem;
+}
+
+.kraj,.naslov{
+display: flex;
+flex-direction: column;
+}
+
+.kontaktCon{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+
 }
