--- a/frontend/homesteadhubdv/src/App.css
+++ b/frontend/homesteadhubdv/src/App.css
@@ -118,6 +118,11 @@
     overflow-x: hidden;
   }
 
+  @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+*{
+    font-family: 'Poppins';
+}
+
 
 
 
