--- a/frontend/homesteadhubdv/src/App.css
+++ b/frontend/homesteadhubdv/src/App.css
@@ -124,6 +124,17 @@
 }
 
 
+.filterIskanja{
+  display: flex;
+  background-color: lightgray;
+  width: 100%;
+  height: 10vh;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
+}
+
 
 
 @keyframes App-logo-spin {
