--- a/frontend/homesteadhubdv/src/css/odstraniNepremicnino.css
+++ b/frontend/homesteadhubdv/src/css/odstraniNepremicnino.css
@@ -52,9 +52,10 @@ h2 {
 form {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   gap: 10px;
   align-items: center;
-  justify-content: center;
   margin-bottom: 1rem;
 }
 
